<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/home_selector"
        android:iconTint="@color/white"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_categories"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/category_selector"
        android:iconTint="@color/white"
        android:title="@string/category_caps" />

    <item
        android:id="@+id/navigation_stores"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/store_selector"
        android:iconTint="@color/white"
        android:title="@string/store" />


    <item
        android:id="@+id/navigation_cart"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/cart_selector"
        android:iconTint="@color/white"
        android:title="@string/cart_caps" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/account_selector"
        android:iconTint="@color/white"
        android:title="@string/profile_caps" />
</menu>