<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/txtSelectStore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_slab_regular"
            android:text="@string/you_have_not_selected_yet"
            android:textColor="@color/ace_theme_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvFindStore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFindStore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ace_theme_color_rounded_rectangle_4dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/find_store"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSelectStore" />

        <TextView
            android:id="@+id/tvWhyFindStore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ace_theme_color_outlined_rounded_rectangle_4dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/why_find_a_store"
            android:textColor="@color/ace_theme_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFindStore" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>