<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/empty_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="@string/your_cart_empty"
                android:textColor="@color/ace_theme_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <TextView
                android:id="@+id/textView74"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/avantgarde_regular"
                android:gravity="center_horizontal"
                android:text="@string/look_like_empty_cart"
                android:textColor="@color/dark_grey_txt"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView64" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btnShopNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ace_red_rounded_rectangle_12dp_corner"
            android:paddingLeft="24dp"
            android:paddingTop="4dp"
            android:paddingRight="24dp"
            android:paddingBottom="4dp"
            android:text="@string/shop_now"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout12"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout12"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout12"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>